# axdp

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: flow_bifurcation.md  sriov_docs.md
examples/: deshred.rs  deshred_sharded.rs  disruptor_event.rs  packet_pool.rs  relay.rs  shred_processor.rs
scripts/: remove_flow_bifurcation.sh  remove_sriov.sh  setup_flow_bifurcation.sh  setup_sriov.sh
src/: device.rs  lib.rs  program.rs  raw_socket.rs  relay_loop.rs  rx_loop.rs  socket.rs  tx_loop.rs  umem.rs
xdp-ebpf/: Cargo.toml  build_ebpf.sh
xdp-ebpf/.cargo/: config.toml
xdp-ebpf/src/: main.rs
