[package]
name = "agave-xdp"
description = "Agave XDP implementation"
edition = "2021"

[dependencies]
ahash = "0.8"
bincode = "1.3"
crossbeam-channel = "0.5.15"
disruptor = "3.6.1"
itertools = "0.13"
lazy_static = "1.5.0"
libc = "0.2.175"
log = "0.4.28"
solana-entry = "3.0.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0"
solana-ledger = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
thiserror = "2.0.16"
tokio = "1.47.1"
futures-util = "0.3.31"

[target.'cfg(target_os = "linux")'.dependencies]
# aya = { workspace = true }
aya = "0.13"
caps = "0.5.5"

[dev-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
core_affinity = "0.5.10"
ctrlc = "3.2.0"
