[package]
name = "xdp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.1"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[[bin]]
name = "xdp-redirect"
path = "src/main.rs"